--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,9 +17,9 @@
    <widget class="QPushButton" name="ifstream1">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>230</x>
       <y>10</y>
-      <width>75</width>
+      <width>141</width>
       <height>41</height>
      </rect>
     </property>
@@ -31,9 +31,9 @@
    <widget class="QPushButton" name="ofstream">
     <property name="geometry">
      <rect>
-      <x>460</x>
+      <x>550</x>
       <y>10</y>
-      <width>111</width>
+      <width>141</width>
       <height>41</height>
      </rect>
     </property>
@@ -45,9 +45,9 @@
    <widget class="QPushButton" name="deleteWords">
     <property name="geometry">
      <rect>
-      <x>250</x>
+      <x>90</x>
       <y>10</y>
-      <width>84</width>
+      <width>121</width>
       <height>41</height>
      </rect>
     </property>
@@ -58,10 +58,10 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>130</x>
       <y>80</y>
-      <width>149</width>
-      <height>13</height>
+      <width>173</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
@@ -74,10 +74,10 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>500</x>
+      <x>510</x>
       <y>80</y>
-      <width>191</width>
-      <height>13</height>
+      <width>221</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
@@ -107,6 +107,20 @@
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="ifstream1_2">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>10</y>
+      <width>131</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Считать из файла
+по-умолчанию</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -114,7 +128,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
